parser/src/snapshots/parser__error__tests__expected_name_after_header_keyword.snap
---
source: parser/src/error.rs
expression: error
---
ParserErrors {
    errors: [
        post http://localhost {header}
                                     ≈
                                     ↳ [1:30] expected string, got }
        ,
    ],
    incomplete_rogram: Program {
        items: [],
    },
}
