parser/src/snapshots/parser__error__tests__expected_url_after_method-2.snap
---
source: parser/src/error.rs
expression: error
---
ParserErrors {
    errors: [
        post
           
           ↳ [1:4] expected either one of url,pathname, but got Eof
        ,
    ],
    incomplete_rogram: Program {
        items: [],
    },
}
