parser/src/snapshots/parser__error__tests__expected_url_after_method.snap
---
source: parser/src/error.rs
expression: error
---
ParserErrors {
    errors: [
        get {}
            ≈
            ↳ [1:5] expected either one of [Url, Pathname], but got LBracket({)
        ,
        get {}
             ≈
             ↳ [1:6] expected either one of [Ident, StringLiteral, Boolean, Number, MultiLineStringLiteral, LBracket, LSquare], but got RBracket(})
        ,
    ],
    incomplete_rogram: Program {
        items: [],
    },
}
