parser/src/snapshots/parser__error__tests__expecting_commas_between_certain_json_items-2.snap
---
source: parser/src/error.rs
expression: error
---
ParserErrors {
    errors: [
         let o = ["joe" "world"] 
                        ≈≈≈≈≈≈≈
                        ↳ [1:17] expected ,, got string
        ,
         let o = ["joe" "world"] 
                               ≈
                               ↳ [1:24] expected either one of identifier,string,boolean,number,string,{,[,null, but got ]
        ,
    ],
    incomplete_rogram: Program {
        items: [],
    },
}
