parser/src/snapshots/parser__error__tests__expecting_commas_between_certain_json_items.snap
---
source: parser/src/error.rs
expression: error
---
ParserErrors {
    errors: [
                         yo: "joe"
                         hello: "world"
                         ≈≈≈≈≈
                         ↳ [3:18] expected ',' but got identifier
                       }
        ,
    ],
    incomplete_rogram: Program {
        items: [],
    },
}
