parser/src/snapshots/parser__error__tests__expecting_identifier_or_string_lit_after_header_name.snap
---
source: parser/src/error.rs
expression: error
---
ParserErrors {
    errors: [
        get http://localhost { header "name" }
                                             ≈
                                             ↳ [1:38] expected either one of [StringLiteral, Ident, MultiLineStringLiteral], but got RBracket(})
        ,
    ],
    incomplete_rogram: Program {
        items: [],
    },
}
